# wordle-django

./: README.md
backend/: .example.env  docker-compose.yaml  manage.py  pyproject.toml  pytest.ini
backend/wordle_api/: asgi.py  helpers.py  models.py  settings.py  urls.py  views.py  words.py  wsgi.py
backend/wordle_api/migrations/: 0001_initial.py  0002_alter_guesses_game.py  0003_game_guesses_used.py  0004_alter_guesses_word.py
backend/wordle_api/tests/: test_views.py
client/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
client/src/: App.tsx
client/src/components/board/: board.tsx  board.util.ts
client/src/components/game/: game.tsx
client/src/components/keyboard/: keyboard.tsx  keyboard.util.ts
client/src/wordle/: index.ts  wordle.constants.ts  wordle.hook.ts  wordle.queries.ts  wordle.types.ts  wordle.util.ts
